--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "mongoose": "^7.8.6",
-    "nodemailer": "^6.10.1"
+    "nodemailer": "^6.10.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
