--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,2 @@
-# VITE_API_URL=https://plataforma-27ch.onrender.com
-VITE_API_URL=http://localhost:3002
+VITE_API_URL=https://plataforma-27ch.onrender.com
+# VITE_API_URL=http://localhost:3002
